@@ -493,7 +493,7 @@ class RangeSet:
         to s and t.
         """
         self_copy = copy.deepcopy(self)
-        self_copy.intersection_update(other)
+        self_copy.intersection_update(rangeset)
         return self_copy
 
     def __and__(self, other):
@@ -539,7 +539,7 @@ class RangeSet:
         in t.
         """
         self_copy = copy.deepcopy(self)
-        self_copy.difference_update(other)
+        self_copy.difference_update(rangeset)
         return self_copy
 
     def __sub__(self, other):
